envoyfilter-teaching/envoyfilter/wasm/ef-wasm-configuration.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: wasm
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_FIRST
      value: 
        name: envoy.filters.http.wasm
        typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                config:
                  name: my_plugin
                  configuration:
                    "@type": type.googleapis.com/google.protobuf.StringValue
                    value: |
                        { "debug": "false", "stat_prefix": "istio", "disable_host_header_fallback": true } 
                  fail_open: true
                  vm_config:
                    runtime: "envoy.wasm.runtime.null"
                    code:
                      local:
                        inline_string: "envoy.wasm.stats"
